--- a/css/styles.css
+++ b/css/styles.css
@@ -115,17 +115,29 @@ img {
   color: #2e2f42;
   display: flex;
   gap: 40px;
+  align-items: center;
 }
 
 .navigation-list-link {
-  padding: 24px 0;
-  display: block;
+  display: flex;
+  flex-direction: column;
   font-weight: 500;
+  padding: 24px 0;
 }
 
 .navigation-list-link:hover,
 .navigation-list-link:focus {
   color: #404bbf;
+}
+
+.navigation-list-link:hover::after,
+.navigation-list-link:focus::after {
+  margin-top: 20px;
+  content: "";
+  width: auto;
+  height: 4px;
+  border-radius: 2px;
+  background: var(--OCEAN, #404bbf);
 }
 
 /* COMMUNICATION */
@@ -151,6 +163,12 @@ img {
 /* CONTAINER */
 .section-hero {
   background-color: #2e2f42;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-section/hero-background.jpg);
+  background-size: cover;
   padding: 188px 0;
   text-align: center;
 }
@@ -222,14 +240,29 @@ img {
 }
 
 /* CONTENT */
+
+.tactic-icon-list {
+  display: flex;
+  margin-bottom: 8px;
+}
+
+.tactic-icon-list-item {
+  width: calc((100% - 72px) / 4);
+  text-align: center;
+  padding: 24px 100px;
+  border-radius: 4px;
+  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
+  background: var(--CLOUD, #f4f4fd);
+}
+
+.tactic-icon-list-item:not(:last-child) {
+  margin-right: 24px;
+}
+
 .tactic-list {
   display: flex;
   gap: 24px;
   justify-content: center;
-}
-
-.tactic-list-icon {
-  stroke: #2e2f42;
 }
 
 .tactic-list-item {
@@ -269,6 +302,9 @@ img {
 .team-list-text-content {
   padding: 32px 0;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .team-name-title {
@@ -279,6 +315,23 @@ img {
 .team-list-text {
   font-size: 16px;
   text-align: center;
+  margin-bottom: 8px;
+}
+
+.team-social-list {
+  display: flex;
+  gap: 24px;
+}
+
+.team-social-link {
+  display: flex;
+  line-height: 0;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  align-items: center;
+  justify-content: center;
 }
 
 /* ------------------------------------------- */
@@ -306,12 +359,39 @@ img {
 
 .portfolio-list-item img {
   width: 100%;
+  height: 100%;
+}
+
+.portfolio-list-item-image {
+  position: relative;
+  overflow: hidden;
 }
 
 .portfolio-list-text-content {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
+}
+
+.portfolio-list-item-overlay {
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: auto;
+  transform: translateY(100%);
+  transition: transform 250ms linear;
+}
+
+.portfolio-list-item:hover .portfolio-list-item-overlay {
+  transform: translateY(0%);
+}
+
+.portfolio-list-item-overlay p {
+  width: 296px;
+  margin: 40px 32px 164px;
 }
 
 /* ------------------------------------------- */
@@ -321,6 +401,7 @@ img {
 .section-footer {
   background-color: #2e2f42;
   padding: 100px 0;
+  color: #f4f4fd;
 }
 
 .footer-logo-link {
@@ -334,6 +415,40 @@ img {
 }
 
 .footer-text {
-  color: #f4f4fd;
   max-width: 264px;
+}
+
+.footer-content {
+  display: flex;
+}
+
+.footer-logo-text {
+  margin-right: 120px;
+}
+
+.footer-socials {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.footer-socials-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-list-social-link {
+  display: flex;
+  line-height: 0;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-list-social-link:hover,
+.footer-list-social-link:focus {
+  background-color: #404bbf;
 }
