--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,8 @@ img {
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -84,8 +86,6 @@ img {
   justify-content: space-between;
   align-items: center;
   padding: 0 15px;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .navigation {
@@ -129,13 +129,16 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.navigation-list-item:first-child {
+  color: #404bbf;
+}
+
 .navigation-list-link:hover,
 .navigation-list-link:focus {
   color: #404bbf;
 }
 
-.navigation-list-link:hover::after,
-.navigation-list-link:focus::after {
+.active-page-underline::after {
   content: "";
   width: 100%;
   height: 4px;
@@ -157,7 +160,7 @@ img {
   gap: 40px;
 }
 
-.communication-list li {
+.communication-list-item {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -451,6 +454,7 @@ img {
 
 .footer-socials {
   display: flex;
+  flex-direction: column;
 }
 
 .footer-socials-list {
@@ -473,14 +477,14 @@ img {
 }
 
 .footer-list-social-link {
+  width: 40px;
+  height: 40px;
   display: flex;
   line-height: 0;
   border-radius: 50%;
   background-color: #4d5ae5;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
 }
 
 .footer-list-social-link:hover,
