--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,7 @@ img {
   gap: 40px;
 }
 
-.communication-list-item {
+.communication-link {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -485,6 +485,7 @@ img {
   background-color: #4d5ae5;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-list-social-link:hover,
